traefik/argo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
    - "argocd.docker.localhost"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
    - backendRefs:
      - name: argocd-server # Nome do serviço de backend
        port: 80
        kind: service
