traefik/route-go.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-api-service
  namespace: dev # Namespace da aplicação
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
    - "go.docker.localhost"
  # Regras de roteamento
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /products
    - backendRefs:
      - name: go-api-service # Nome do serviço de backend
        port: 8080
